--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,3 +7,17 @@
     flex-direction: column;
     align-items: center;
   }
+
+nav {
+  max-width: 1200px;
+  margin-left: 10%;
+}
+
+nav a {
+  font-size: 15px;
+  padding-right: 50px;
+  cursor: pointer;
+  :hover {
+    border-bottom: 1em black;
+  }
+}
