--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,62 @@
-<p>page-not-found works!</p>
+<div class="ds2-stage-presentation--keyvisual-cta-location ds2-row-padding" style="width: 80%;
+                                     left: 5%;
+                                     top: 25%">
+                            
+                                
+
+
+
+
+    
+    
+    
+    
+
+    
+    
+    
+    
+    
+    <h1 class="ds2-stage-presentation--keyvisual-title    ds2-font-xxl">
+        
+        
+            DID YOU GET LOST?
+        
+    </h1>
+
+
+    
+    
+
+    <div class="ds2-subbrand-icon--container">
+        
+        
+        
+        
+    
+    
+    <h2 class="ds2-stage-presentation--keyvisual-subtitle   ds2-subbrand-icon--subheadline  ds2-font-l">
+        
+        
+            TIME TO GET BACK ON TRACK.
+        
+    </h2>
+
+
+    </div>
+    
+
+
+
+
+
+
+
+                            
+                            
+                            <div class="show-for-large-up">
+
+        <button mat-raised-button color="primary" [routerLink]="'/home'">Back to start</button>
+        
+</div>
+  </div>
