--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,11 @@
+<div class="header">
+  <h2>BMW Vehicle Assessment.</h2>
+</div>
+
+<img class="bg" src="../assets/bmw-2-series.jpg"/>
 
 <div class="container">
-    <img class="home-image" title="BMW 2 Series Coupé, driving shot three-quarter front shot" alt="BMW 2 Series Coupé, driving shot three-quarter front shot" src="assets/bmw-2-series-coupe-inspire-sp-xxl.jpg">
-    <button mat-raised-button color="primary" [routerLink]="'/vehicles'">Start your journey here!</button>
+   <button mat-raised-button color="primary" [routerLink]="'/vehicles'">Start your journey here!</button>
 </div>  
 <router-outlet>
 </router-outlet>
