--- a/src/app/vehicles/vehicles.component.html
+++ b/src/app/vehicles/vehicles.component.html
@@ -1,5 +1,6 @@
+<img class="bg" src="../assets/bmw-2-series.jpg"/>
 
-<h2>BMW Models:</h2>
+<h2> BMW Models </h2>
 <div class="mat-elevation-z8">
 
 <table #table 
