--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,38 +1,54 @@
-.container {
-    // position: relative;
-    // width: 100%;
-    // height: 100%;
-    // max-width: 400px;
-    background-image: url("/assets/bmw-2-series-coupe-inspire-sp-xxl.jpg") no-repeat center;
+
+img.bg {
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+   
+  /* Preserve aspet ratio */
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -10;
 }
-  
+
 .container img {
-    width: 100%;
-    height: auto;
-    object-fit: fill;
+  width: 100%;
+  height: auto;
+  object-fit: fill;
 }
 
-.home-image {
-    z-index: -10;
-    object-fit: fill;
+
+.container {
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   -ms-transform: translate(-50%, -50%);
+   color: white;
+   font-size: 16px;
+   /* align-content: center; */
+   padding: 12px 24px;
+   border: none;
+   cursor: pointer;
+   border-radius: 5px;
+   text-align: center;
+   z-index: 20;
+   button {
+     background-color: #1C69D4;
+     border-radius: unset !important;
+     width: 285px;
+     height: 50px;
+   }
 }
 
-.container .mat-button {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    background-color: #555;
-    color: white;
-    font-size: 16px;
-    align-content: center;
-    padding: 12px 24px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    text-align: center;
-    z-index: 20;
+.header {
+  h2 {
+    font-family: bmwTypeWebLightAll,Arial,Helvetica,sans-serif;
+    font-weight: 400;
+    font-size: 50px;
   }
-
-
+  padding: 0 7.5px;
+  margin-top: 10%;
+  margin-bottom: 30px;
+  min-height: 55px;
+  line-height: 71px;
+}
