--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -63,8 +63,8 @@
 <mat-toolbar>
    <div class="logo-container"><img src="../assets/BMW_White_Logo.svg" alt="BMW Logo"/></div> 
     <nav>
-      <a routerLink="/home">Home</a>
-      <a routerLink="/vehicles">Models</a>
+      <a routerLink="/home" routerLinkActive="active">Home</a>
+      <a routerLink="/vehicles" routerLinkActive="active">Models</a>
   </nav>
 </mat-toolbar>
 
