--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,4 @@
+$custom-blue:  #1C69D4;
 
 @media screen and (max-width: 1024px) { /* Specific to this particular image */
   img.bg {
@@ -30,28 +31,28 @@ mat-toolbar {
   align-items: center;
 }
 
-img.bg {
-    position: fixed; 
-    top: 0; 
-    left: 0; 
-    
-    /* Preserve aspet ratio */
-    min-width: 100%;
-    min-height: 100%;
-}  
-
 
 nav {
   max-width: 1200px;
   margin-left: 10%;
-}
-
-nav a {
-  font-size: 15px;
-  padding-right: 50px;
-  color: #ffffff;
-  cursor: pointer;
-  :hover {
-    border-bottom: 1em black;
+  a {
+    float: left;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    border-bottom: 3px solid transparent;
+    font-size: 15px;
+    color: #ffffff;
+    text-align: center;
+    cursor: pointer;
+    &.active { 
+      border-bottom: 3px solid $custom-blue;
+    }
+    :hover {
+      border-bottom: 3px solid $custom-blue;
+    }
   }
 }
+
